--- a/tests/objectdetect/yolo/notebooks/pretrain_network.ipynb
+++ b/tests/objectdetect/yolo/notebooks/pretrain_network.ipynb
@@ -861,10 +861,11 @@
    },
    "outputs": [],
    "source": [
-    "with open('pretrained_loss.pkl_2', 'wb') as f:\n",
+    "with open('pretrained_loss_2.pkl', 'wb') as f:\n",
     "    lossdict = {}\n",
     "    lossdict['train_loss'] = train_loss_total\n",
-    "    lossdict['test_loss'] = test_loss_total"
+    "    lossdict['test_loss'] = test_loss_total\n",
+    "    pk.dump(lossdict, f)"
    ]
   },
   {
